# ngs_amgcl

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
demos/: poisson.py
src/: __init__.py  amgcl_precond.cpp  amgcl_precond.hpp  ngsolve_amgcl.cpp  ngsolve_backend.hpp
