[project]
name = "ngsolve_amgcl"
version = "0.1.0"
description = "AMGCL algebraic multigrid preconditioner for NGSolve"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]
classifiers = [
  "License :: OSI Approved :: MIT License",
]

[build-system]
requires = [
            "ngsolve>=6.2.2405.post22.dev0",
            "scikit-build-core>=0.9.0",
            "pybind11_stubgen",
            "cmake",
            "toml;  python_version >= '3.11'",
            "tomli>=1.1.0; python_version < '3.11'"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
experimental = true
metadata.dependencies.provider="ngsolve._scikit_build_core_dependencies"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
skip = """
  pp*
  *_i686
  *musllinux*
  *win32
"""

[tool.cibuildwheel.linux]
repair-wheel-command = "mv {wheel} {dest_dir} && rename linux_x86_64 manylinux_2_28_x86_64.manylinux2014_x86_64 {dest_dir}/*-linux_x86_64*.whl"

[tool.cibuildwheel.macos]
environment = {MACOSX_DEPLOYMENT_TARGET="10.15"}
repair-wheel-command = ""
archs = ["universal2"]
